--- a/MagicVilla.CouponAPI/appsettings.json
+++ b/MagicVilla.CouponAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Trusted_Connection=True;Initial Catalog=MinimalAPI;Integrated Security=True;MultipleActiveResultSets=true"
+  },
+  "ApiSettings": {
+    "Secret":  "superandomsecretstuffthinghere"
   }
 }
